changes for agentic workflow

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -110,11 +110,11 @@ tasks:
           --max-model-len=4096
 
   run-cuda:
-      cmds:
-        - |
-          ddocker run --rm --gpus all \                                            1 ↵
-            --entrypoint nvidia-smi \
-            vllm/vllm-openai:latest
+    cmds:
+      - |
+        docker run --rm --gpus all \
+          --entrypoint nvidia-smi \
+          vllm/vllm-openai:latest
             
   default:
     cmds:
