--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dev = [
         "pylint>=3.3.6",
         "pyink>=24.10.1",
         "google-cloud-aiplatform[evaluation]>=1.88.0",
+        "pre-commit"
     ]
 test = [
 ]
