changes for the descriptions and english

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,8 @@ lint.select = [
 lint.ignore = [
     "D107",   # Missing docstring in `__init__`
     "D404",   # First line should end with a period
+    "D400",   # First line should end with a period
+    "D415",   # First line should end with a period
     "D401",   # First line should be in imperative mood
     "D203",   # incorrect-blank-line-before-class
     "D205",   # blank-line-after-function
