--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pyyaml",
     "loguru==0.7.3",
     "jsonschema",
+    "jinja2",
 ]
 
 dynamic = ['version']
@@ -44,6 +45,7 @@ test = [
     "pytest>=8.3.5",
     "pytest-cov >=6.1.0",
     "pydantic-settings>=2.8.1",
+    "rich",
 ]
 
 ci = []
